# Rocabert-et-al-2023-Ecography

./: A_run_validation.sh  B_run_best_models.sh  CMakeLists.txt  C_compute_evaluation_distributions.sh  D_compute_complete_evaluation_distributions.sh  E_generate_figures.sh  F_convert_figures.sh  G_generate_minigif.sh  README.docx  README.md
1_simulation_results/: 1-isotropic_best.txt  1-isotropic_mean.txt  2-human_activity_best.txt  2-human_activity_mean.txt  3-road_network_best.txt  3-road_network_mean.txt  4-combined_best.txt  4-combined_mean.txt
2_cmaes_validation/: 1-isotropic_all.txt  1-isotropic_mean.txt  1-isotropic_replayed.txt  2-human_activity_all.txt  2-human_activity_mean.txt  2-human_activity_replayed.txt  3-road_network_all.txt  3-road_network_mean.txt  3-road_network_replayed.txt  4-combined_all.txt  4-combined_mean.txt  4-combined_replayed.txt
3_best_models/1-isotropic/output/: final_state.txt  parameters.txt  state_0.txt  state_1.txt  state_10.txt  state_11.txt  state_12.txt  state_13.txt  state_14.txt  state_15.txt  state_16.txt  state_17.txt  state_18.txt  state_19.txt  state_2.txt  state_20.txt  state_21.txt  state_22.txt  state_23.txt  state_24.txt  state_3.txt  state_4.txt  state_5.txt  state_6.txt  state_7.txt  state_8.txt  state_9.txt
3_best_models/2-human_activity/output/: final_state.txt  parameters.txt  state_0.txt  state_1.txt  state_10.txt  state_11.txt  state_12.txt  state_13.txt  state_14.txt  state_15.txt  state_16.txt  state_17.txt  state_18.txt  state_19.txt  state_2.txt  state_20.txt  state_21.txt  state_22.txt  state_23.txt  state_24.txt  state_3.txt  state_4.txt  state_5.txt  state_6.txt  state_7.txt  state_8.txt  state_9.txt
3_best_models/3-road_network/output/: final_state.txt  lineage_tree.txt  parameters.txt  state_0.txt  state_1.txt  state_10.txt  state_11.txt  state_12.txt  state_13.txt  state_14.txt  state_15.txt  state_16.txt  state_17.txt  state_18.txt  state_19.txt  state_2.txt  state_20.txt  state_21.txt  state_22.txt  state_23.txt  state_24.txt  state_3.txt  state_4.txt  state_5.txt  state_6.txt  state_7.txt  state_8.txt  state_9.txt
3_best_models/4-combined/output/: final_state.txt  parameters.txt  state_1.txt  state_10.txt  state_11.txt  state_12.txt  state_13.txt  state_14.txt  state_15.txt  state_16.txt  state_17.txt  state_18.txt  state_19.txt  state_2.txt  state_20.txt  state_21.txt  state_22.txt  state_23.txt  state_24.txt  state_3.txt  state_4.txt  state_5.txt  state_6.txt  state_7.txt  state_8.txt  state_9.txt
4_models_evaluation/1-isotropic/: score_distribution.txt
4_models_evaluation/1-isotropic/input/: UMZ2006_cut2.shp.xml
4_models_evaluation/1-isotropic/output/: final_state.txt  parameters.txt
4_models_evaluation/2-human_activity/: score_distribution.txt
4_models_evaluation/2-human_activity/output/: final_state.txt  parameters.txt
4_models_evaluation/3-road_network/: score_distribution.txt
4_models_evaluation/3-road_network/output/: final_state.txt  lineage_tree.txt  parameters.txt
4_models_evaluation/4-combined/: score_distribution.txt
4_models_evaluation/4-combined/output/: final_state.txt  parameters.txt
5_models_complete_evaluation/1-isotropic/: complete_evaluation_all.txt
5_models_complete_evaluation/1-isotropic/output/: final_state.txt  parameters.txt  state_1.txt  state_10.txt  state_11.txt  state_12.txt  state_13.txt  state_14.txt  state_15.txt  state_16.txt  state_17.txt  state_18.txt  (+14 more)
5_models_complete_evaluation/2-human_activity/: complete_evaluation_all.txt
5_models_complete_evaluation/3-road_network/: complete_evaluation_all.txt
5_models_complete_evaluation/4-combined/: complete_evaluation_all.txt
cmake/: make_clean.sh  make_debug.sh  make_release.sh
cmake/modules/: Config.h.in  FindGSL.cmake
scripts/: AnimationS1.R  Figure1_SupportingInformation4.R  Figure3.R  Figure3_SupportingInformation4.R  Figure4.R  Figure4_SupportingInformation4.R  Figure5.R  Figure5_SupportingInformation4.R  FigureS2.R  Figures_SupportingInformation3.R  Print_Evaluation_metrics.R  Print_LogLikelihood_AIC_metrics.R  best_model.py  complete_evaluation.R  complete_evaluation.py  evaluate.py  evaluation.R  minigif.R  validate.py
scripts/deprecated/: FigureS3.R  FigureS3_bis.R
src/: HMD_model_optimize.py  HMD_model_run.cpp
src/lib/: Enums.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Parameters.cpp  Parameters.h  Prng.cpp  Prng.h  Simulation.cpp  Simulation.h
(+80 files in other folders)
